--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ tensorboard==2.5.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
 tensorflow-estimator==2.5.0
-tensorflow-gpu==2.5.0
+tensorflow
 termcolor==1.1.0
 typing-extensions==3.7.4.3
 urllib3==1.26.5
